--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
     "src": "./src"
   },
   "dependencies": {
-    "@typechain/hardhat": "^2.3.1",
+    "@typechain/hardhat": "^3.0.0",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/lodash.uniq": "^4.5.6",
     "@uniswap/token-lists": "^1.0.0-beta.27",
-    "hardhat": "^2.6.8",
+    "hardhat": "^2.8.0",
     "lodash.uniq": "^4.5.0",
     "lodash.zip": "^4.2.0",
     "module-alias": "^2.2.2",
     "prettier": "^2.4.1"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-vyper": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.4.0",
-    "@typechain/ethers-v5": "^7.2.0",
+    "@typechain/ethers-v5": "^8.0.5",
     "@types/chai": "^4.2.22",
     "@types/lodash.zip": "^4.2.6",
     "@types/mocha": "^9.0.0",
@@ -29,14 +29,14 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
+    "ethers": "^5.5.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.4.0",
-    "typechain": "^5.2.0",
+    "typechain": "^6.0.5",
     "typechain-target-ethers-v5": "^5.0.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "build": "rm -rf artifacts src/types && npx hardhat compile",
@@ -47,6 +47,7 @@
     "deploy-local-mainnet": "npx hardhat run src/scripts/deployLocalMainnet.ts --network localhost --no-compile --config hardhat.mainnet.config.ts",
     "load-contracts": "sh scripts/load-elf-contracts.sh",
     "start": "npx hardhat node",
-    "start-mainnet": "npx hardhat node --config hardhat.mainnet.config.ts"
+    "start-mainnet": "npx hardhat node --config hardhat.mainnet.config.ts",
+    "start-mainnet:dev": "npx hardhat node --config hardhat.mainnet.dev.config.ts"
   }
 }
