--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@types/lodash.zip": "^4.2.6",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.17.34",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "chai": "^4.3.4",
-    "eslint": "^7.32.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
+    "hardhat-tracer": "^1.0.0-alpha.6",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint-plugin-prettier": "^0.0.5",
     "ts-generator": "^0.1.1",
@@ -48,6 +49,6 @@
     "load-contracts": "sh scripts/load-elf-contracts.sh",
     "start": "npx hardhat node",
     "start-mainnet": "npx hardhat node --config hardhat.mainnet.config.ts",
-    "start-mainnet:dev": "npx hardhat node --config hardhat.mainnet.dev.config.ts"
+    "start-mainnet:dev": "npm run build && npx hardhat node --config hardhat.mainnet.dev.config.ts"
   }
 }
