--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.4.1"
   },
   "devDependencies": {
+    "@ethersproject/providers": "^5.5.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-vyper": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -30,6 +31,7 @@
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
+    "hardhat-ethernal": "^0.3.11",
     "hardhat-tracer": "^1.0.0-alpha.6",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint-plugin-prettier": "^0.0.5",
@@ -49,6 +51,6 @@
     "load-contracts": "sh scripts/load-elf-contracts.sh",
     "start": "npx hardhat node",
     "start-mainnet": "npx hardhat node --config hardhat.mainnet.config.ts",
-    "start-mainnet:dev": "npm run build && npx hardhat node --config hardhat.mainnet.dev.config.ts"
+    "start-mainnet:dev": "npx hardhat node --config hardhat.mainnet.dev.config.ts"
   }
 }
