--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "src": "./src"
   },
   "dependencies": {
+    "@elementfi/tokenlist": "^2.0.0",
     "@typechain/hardhat": "^3.0.0",
     "@types/ethereumjs-abi": "^0.6.3",
     "@types/lodash.uniq": "^4.5.6",
