--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^2.4.1"
   },
   "devDependencies": {
+    "@elementfi/tokenlist": "^2.0.0",
     "@ethersproject/providers": "^5.5.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-vyper": "^2.0.1",
